--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">Ver más</a>
+        <a href="#" class="btn" id="btnVerMas">Ver más</a>
     </div>
 
     <!--Novedades-->
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">Ver más</a>
+        <a href="#" class="btn" id="btnVerMas">Ver más</a>
     </div>
 
     <!--Infantil-->
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">Ver más</a>
+        <a href="#" class="btn" id="btnVerMas">Ver más</a>
     </div>
 
     <!--Juvenil-->
@@ -160,7 +160,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">Ver más</a>
+        <a href="#" class="btn" id="btnVerMas">Ver más</a>
     </div>
 
     <!--Comics-->
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">Ver más</a>
+        <a href="#" class="btn" id="btnVerMas">Ver más</a>
     </div>
 
     <div id="sep">
@@ -220,6 +220,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/script.js" defer></script>
 </body>
 
 </html>
